--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ LFW_dataset/
 test_image/
 test_dataset/
 train_image1/
+train_image/
 train_image2/
 train_image3/
+dataset_easy/
+dataset_hard/
+__pycache__/
 *.bin
+*.txt
